# IT279-a01_nick

./: CMakeLists.txt  README.md
q01/: List.cpp  List.h  a01_q1_app.cpp
q02/: List.cpp  List.h  a02_q2_app.cpp
q03/: a01_q3.cpp  a01_q3.h
q04/: a01_q4.cpp  a01_q4.h
